--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS - The code neeted in order to implement the Bootstrap Library into the code -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"/>
+
     <title>Fixture Generator </title>
+    <link rel="stylesheet" type="text/css" href="CSSFiles/style.css" media="screen">
   </head>
   <body>
     <h1>Fixture Generator</h1>
@@ -18,11 +19,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse justify-content-center">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active"  href="HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
+          <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
-          <a class="nav-item nav-link disabled" href="HTMLPages/leagueTables.html">Team Input</a>
-          <a class="nav-item nav-link disabled" href="HTMLPages/resultsInput.html">League Table and Fixtures</a>
-          <a class="nav-item nav-link disabled" href="HTMLPages/teamsInput.html">Results Input Page</a>
+          <a class="nav-item nav-link disabled" href="leagueTables.html">Team Input</a>
+          <a class="nav-item nav-link disabled" href="resultsInput.html">League Table and Fixtures</a>
+          <a class="nav-item nav-link disabled" href="teamsInput.html">Results Input Page</a>
         </div>
       </div>
     </nav>
