--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Fixture Generator </title>
-    <link rel="stylesheet" type="text/css" href="CSSFiles/style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
   </head>
   <body>
     <h1>Fixture Generator</h1>
@@ -21,12 +21,17 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
-          <a class="nav-item nav-link disabled" href="leagueTables.html">Team Input</a>
-          <a class="nav-item nav-link disabled" href="resultsInput.html">League Table and Fixtures</a>
-          <a class="nav-item nav-link disabled" href="teamsInput.html">Results Input Page</a>
+          <a class="nav-item nav-link disabled" href="x">Team Input</a>
+          <a class="nav-item nav-link disabled" href="x">League Table and Fixtures</a>
+          <a class="nav-item nav-link disabled" href="x">Results Input Page</a>
         </div>
       </div>
     </nav>
+
+    <!-- Text for the Title and Instructions of the Website -->
+    <br>
+    <h1>League Startup Page</h1>
+    <p class="instructions" >Enter the amount of teams (between 1 and 20) and Enter the Type of Tournament wanted</p>
 
     <div class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
