--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Fixture Generator </title>
+
+    <!-- Code to link the stylesheet to the document -->
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
+    
   </head>
   <body>
     <h1>Fixture Generator</h1>
@@ -47,5 +50,7 @@
 
     <div class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Code to link the Javascript File to the document -->
+    <script src="/JavascriptFiles/script.js"></script>
   </body>
 </html>
