Extra small changes

--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -40,7 +40,7 @@
     <div></div>
     <form onSubmit="return formSubmit1()">
             <input id="teamNmb" type="text" placeholder="Enter amount of teams...">
-            <select id = "type" name = "type">
+            <select>
                 <option value="roundRobin">Round Robin</option>
                 <option value="knockout">Knockout</option>
             </select>
