--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -69,6 +69,7 @@
     <div class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Code to link the Javascript File to the document -->
+    <script src="/JavascriptFiles/script.js"></script>
     <script src="/JavascriptFiles/script2.js"></script>
   </body>
 </html>
