End of day 2 : Tiny Changes

--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -60,7 +60,7 @@
                 <option id="teamNmb18"></option>
                 <option id="teamNmb19"></option>
                 <option id="teamNmb20"></option>
-            </select>
+            </select id = "type" name = "type">
             <input id="teamName" type="text" placeholder="New Name...">
             <div></div>
             <input type="submit"> 
