teamArray Class Startup

--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -39,7 +39,7 @@
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
     <form onSubmit="return formSubmit2()">
-            <select>
+            <select id="teamNmb">
                 <option id="teamNmb1"></option>
                 <option id="teamNmb2"></option>
                 <option id="teamNmb3"></option>
@@ -71,5 +71,6 @@
     <!-- Code to link the Javascript File to the document -->
     <script src="/JavascriptFiles/script.js"></script>
     <script src="/JavascriptFiles/script2.js"></script>
+    <script src="/JavascriptFiles/teamArray.js"></script>
   </body>
 </html>
