Serialisation and Deserialisation Complete

--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -39,7 +39,7 @@
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
     <form onSubmit="return formSubmit2()">
-            <select id="teamNmb">
+            <select id="teamNmbSelected">
                 <option id="teamNmb1"></option>
                 <option id="teamNmb2"></option>
                 <option id="teamNmb3"></option>
