The initial Iteration 2 setup

--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -24,9 +24,9 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
-          <a class="nav-item nav-link" href="teamInput.html">Team Input</a>
-          <a class="nav-item nav-link" href="x">League Table and Fixtures</a>
-          <a class="nav-item nav-link" href="x">Results Input Page</a>
+          <a class="nav-item nav-link active" href="teamInput.html">Team Input</a>
+          <a class="nav-item nav-link active" href="x">League Table and Fixtures</a>
+          <a class="nav-item nav-link active" href="x">Results Input Page</a>
         </div>
       </div>
     </nav>
