--- a/HTMLPages/checkWebsite.html
+++ b/HTMLPages/checkWebsite.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
-  <body olload="checkWebsite()">
-    <script scr="/JavascriptFiles/script3.js"></script>
+  <body onload="checkWebsite()">
+    <script src="/JavascriptFiles/script3.js"></script>
   </body>
 </html>
