--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -24,9 +24,9 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
-          <a class="nav-item nav-link disabled" href="x">Team Input</a>
-          <a class="nav-item nav-link disabled" href="x">League Table and Fixtures</a>
-          <a class="nav-item nav-link disabled" href="x">Results Input Page</a>
+          <a class="nav-item nav-link disabled" href="">Team Input</a>
+          <a class="nav-item nav-link disabled" href="">League Table and Fixtures</a>
+          <a class="nav-item nav-link disabled" href="">Results Input Page</a>
         </div>
       </div>
     </nav>
