--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -25,7 +25,7 @@
           <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
           <a class="nav-item nav-link active" href="teamInput.html">Team Input</a>
-          <a class="nav-item nav-link active" href="x">League Table and Fixtures</a>
+          <a class="nav-item nav-link active" href="checkWebsite.html">League Table and Fixtures</a>
           <a class="nav-item nav-link active" href="x">Results Input Page</a>
         </div>
       </div>
