Accepting data into the table

--- a/HTMLPages/Knockout.html
+++ b/HTMLPages/Knockout.html
@@ -41,12 +41,12 @@
         <div class="modal-body row">
             <div class="col-md-6">
                 <!-- Your first column here -->
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam praesentium voluptates tenetur fugit amet rerum architecto ex aliquid aliquam ipsa voluptatum quam autem, dicta delectus mollitia perspiciatis illum rem consequuntur accusamus quasi quas. Sapiente ad, maxime, suscipit soluta dolorem cumque cum, quaerat facere natus vitae deserunt culpa quia modi?
-            </div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores consequuntur asperiores excepturi quasi aliquid, quod, corporis reprehenderit nesciunt esse necessitatibus iste saepe molestiae repudiandae nostrum nihil ullam laborum doloremque placeat cum quidem provident non sunt. Velit nemo, repellat placeat nulla quisquam alias ex. Iure ut assumenda, fugiat modi sed itaque?
+             </div>
             <div class="col-md-6">
                 <!-- Your second column here -->
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum natus aperiam nam enim minima qui laborum odit expedita pariatur quae.
-            </div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nobis velit laboriosam praesentium aut esse quos voluptatem autem modi earum.
+               </div>
         </div>
 
     <!-- Code to link the Javascript File to the document -->
