--- a/HTMLPages/LeagueTable.html
+++ b/HTMLPages/LeagueTable.html
@@ -43,7 +43,7 @@
                 <!-- Your first column here -->
 
                 <!-- This is the code to make the table for the data to be stored in -->
-                <table style = "border: solid;"  frame=void rules=rows>
+                <table style = "border: solid;" >
                     <tr>
                       <th>Standing</th>
                       <th>Team Name</th>
