--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -35,6 +35,10 @@
     <br>
     <h1>League Startup Page</h1>
     <p class="instructions" >Enter the amount of teams (between 2 and 20) and Enter the Type of Tournament wanted</p>
+    <br>
+    <p class="instructions" >Knockout tournaments are only allowed to have 2 , 4, 8 or 16 teams in them</p>
+    <p class="instructions" >Any other amount will be rejected by the system</p>
+    <br>
 
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
