--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -35,6 +35,7 @@
     <br>
     <h1>Team Input Page</h1>
     <p class="instructions" >Select the Team Number in which you want to change and then enter the name of the team that you want to replace it with</p>
+    <p class="instructions" >One single word must not have more than 18 characters in it</p>
 
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
