--- a/HTMLPages/Knockoutquarter.html
+++ b/HTMLPages/Knockoutquarter.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
-  <body onload="knockoutSetup()"">
+  <body onload="knockoutSetup(true)">
     <div class="container">
 
         <!-- The main title of the page -->
@@ -67,7 +67,50 @@
             </div>
             <div class="col-md-6">
                 <!-- Your second column here -->
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam fuga consequuntur dolores quo! Molestias natus cum possimus dignissimos! Minima, inventore quibusdam delectus repudiandae itaque expedita eligendi iusto et, at ad laboriosam ducimus amet cupiditate atque nisi porro non laudantium esse, ipsum doloremque aut quasi neque illo voluptate. Ducimus, iure.
+
+                <!-- Code to make the tabs for the knockout fixtures side of the website -->
+                <!-- Tabs navs -->
+                <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+
+                  <!-- Code to make the first tab-->
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="ex1-tab-1" href="Knockoutr16.html" aria-selected="false"
+                    >Round of 16</a>
+                  </li>
+
+                  <!-- Code to make the second tab-->
+                  <!-- This one has a aria-controls attribute to link it to the content part below-->
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link active" id="ex1-tab-2" href="Knockoutquarter.html" aria-controls="ex1-tabs-2" aria-selected="true"
+                    >Quarter Finals</a>
+                  </li>
+
+                  <!-- Code to make the third tab-->
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="ex1-tab-3" href="Knockoutsemi.html" aria-selected="false"
+                    >Semi Finals</a>
+                  </li>
+
+                  <!-- Code to make the fourth tab-->
+                  <li class="nav-item" role="presentation">
+                    <a class="nav-link" id="ex1-tab-4" href="Knockoutfinal.html" aria-selected="false"
+                    >Final</a>
+                  </li>
+                </ul>
+                <!-- Tabs navs -->
+
+                <!-- Tabs content -->
+                <div class="tab-content" id="ex1-content">
+                  <div class="tab-pane fade show active" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                    <h1>Quarter Finals Fixtures</h1>
+                    <br>
+                    <div id="quarterFixture1"></div>
+                    <div id="quarterFixture2"></div>
+                    <div id="quarterFixture3"></div>
+                    <div id="quarterFixture4"></div>
+                  </div>
+                </div>
+                <!-- Tabs content -->
               </div>
         </div>
 
