Code to generate the round robin fixtures

--- a/HTMLPages/Knockoutquarter.html
+++ b/HTMLPages/Knockoutquarter.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
-  <body onload="knockoutSetup(true)">
+  <body onload="knockoutSetup()">
     <div class="container">
 
         <!-- The main title of the page -->
