Making the buttons

--- a/HTMLPages/LeagueTable.html
+++ b/HTMLPages/LeagueTable.html
@@ -25,9 +25,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="collapse navbar-collapse justify-content-center">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
-                    <a class="nav-item nav-link active" href="teamInput.html">Team Input</a>
-                    <a class="nav-item nav-link active" href="checkWebsite.html">League Table and Fixtures</a>
+                    <a class="nav-item nav-link active"  href="/HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
+                    <a class="nav-item nav-link active" href="/HTMLPages/teamInput.html">Team Input</a>
+                    <a class="nav-item nav-link active" href="/HTMLPages/checkWebsite.html">League Table and Fixtures</a>
                     <a class="nav-item nav-link active" href="x">Results Input Page</a>
                 </div>
             </div>
@@ -322,7 +322,36 @@
               </div>
             <div class="col-md-6">
                 <!-- Your second column here -->
-                
+
+                <!-- Code for the title of the right hand side-->
+                <h2>Links to the fixtures for each team</h1>
+                <br>
+
+                <!-- Code for the buttons to link to the websites for the fixtures-->
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team1.html';" id="button1" > </button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team2.html';" id="button2"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team3.html';" id="button3"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team4.html';" id="button4"></button>
+                <div></div>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team5.html';" id="button5"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team6.html';" id="button6"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team7.html';" id="button7"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team8.html';" id="button8"></button>
+                <div></div>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team9.html';" id="button9"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team10.html';" id="button10"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team11.html';" id="button11"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team12.html';" id="button12"></button>
+                <div></div>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team13.html';" id="button13"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team14.html';" id="button14"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team15.html';" id="button15"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team16.html';" id="button16"></button>
+                <div></div>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team17.html';" id="button17"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team18.html';" id="button18"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team19.html';" id="button19"></button>
+                <button onclick="window.location.href='/HTMLPages/TeamPages/team20.html';" id="button20"></button>
              </div>
         </div>
 
