--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse justify-content-center">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
+          <a class="nav-item nav-link active"  href="/HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
           <a class="nav-item nav-link disabled" href="">Team Input</a>
           <a class="nav-item nav-link disabled" href="">League Table and Fixtures</a>
