--- a/HTMLPages/teamInput.HTML
+++ b/HTMLPages/teamInput.HTML
@@ -22,10 +22,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse justify-content-center">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
+          <a class="nav-item nav-link active"  href="/HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
           <!-- disabled is included in the class of these as I don't want the user to be selecting it yet-->
-          <a class="nav-item nav-link active" href="teamInput.html">Team Input</a>
-          <a class="nav-item nav-link active" href="checkWebsite.html">League Table and Fixtures</a>
+          <a class="nav-item nav-link active" href="/HTMLPages/teamInput.html">Team Input</a>
+          <a class="nav-item nav-link active" href="/HTMLPages/checkWebsite.html">League Table and Fixtures</a>
           <a class="nav-item nav-link active" href="x">Results Input Page</a>
         </div>
       </div>
@@ -36,6 +36,7 @@
     <h1>Team Input Page</h1>
     <p class="instructions" >Select the Team Number in which you want to change and then enter the name of the team that you want to replace it with</p>
     <p class="instructions" >One single word must not have more than 18 characters in it</p>
+    <p class="instructions" >The teams name must also not be larger than 30 characters</p>
 
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
