--- a/HTMLPages/Knockoutsemi.html
+++ b/HTMLPages/Knockoutsemi.html
@@ -25,9 +25,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="collapse navbar-collapse justify-content-center">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active"  href="index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
-                    <a class="nav-item nav-link active" href="teamInput.html">Team Input</a>
-                    <a class="nav-item nav-link active" href="checkWebsite.html">League Table and Fixtures</a>
+                    <a class="nav-item nav-link active"  href="/HTMLPages/index.html">League Startup Page (Reset Progress) <span class="sr-only"></span></a>
+                    <a class="nav-item nav-link active" href="/HTMLPages/teamInput.html">Team Input</a>
+                    <a class="nav-item nav-link active" href="/HTMLPages/checkWebsite.html">League Table and Fixtures</a>
                     <a class="nav-item nav-link active" href="x">Results Input Page</a>
                 </div>
             </div>
